spade-tests/src/snapshots/spade_tests__typeinference__expected_a_number_when_bitwise_inverting_an_enum_variant.snap
---
source: spade-tests/src/typeinference.rs
assertion_line: 148
---
entity main() -> uint<8> {
    ~None
}

error: Expected type Number<_>, got std::option::Option<_>
  ┌─ testinput:2:6
  │
2 │     ~None
  │      ^^^^ Expected Number<_>
  │
  = note: Expected: Number<_>
               Got: std::option::Option<_>


